# hybrid-search

./: .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt  sync_search.py
dev/: __init__.py
dev.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dev/adapters/: sql_adapter.py
dev/core/: chunking.py  delta_sync.py  engine.py  hello.json
dev/pipeline/: update_manager.py
