[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-search"
version = "0.2.0"
description = "A plug-and-play hybrid search + RAG engine using HuggingFace and pgvector."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-postgres>=0.0.3",
    "langchain-huggingface>=0.0.3",
    "langchain-experimental>=0.0.50",
    "langchain-text-splitters>=0.2.0",
    "sentence-transformers>=2.7.0",
    "psycopg[binary]>=3.1.0",
    "psycopg-pool>=3.2.0",
    "sqlalchemy>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "transformers>=4.38.0"
]

[project.optional-dependencies]
api = ["fastapi>=0.110.0", "uvicorn>=0.29.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["dev*"]